Update package.json for keywords

--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
   },
   "keywords": [
     "translator",
-    "json"
+    "json",
+    "language",
+    "mstranslator"
   ],
   "author": "andorx",
   "license": "MIT",
